--- a/Zadanie_1/UchebnayaPraktika.csproj
+++ b/Zadanie_1/UchebnayaPraktika.csproj
@@ -159,5 +159,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ClassLibrary1\ClassLibrary1.csproj">
+      <Project>{5b8d4f22-a68a-4747-8671-7deb73e18683}</Project>
+      <Name>ClassLibrary1</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
